# cpg-flow-gcnv

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: build_deploy_main.yaml  dev_auto_build.yaml  docker.yaml  get_version.py  test.yaml
src/cpg_gcnv/: config_template.toml  run_workflow.py  stages.py  utils.py
src/cpg_gcnv/jobs/: AnnotateCnvsWithStrvctvre.py  AnnotateCnvsWithSvAnnotate.py  AnnotateCohortCnv.py  AnnotateDatasetCnv.py  CallGermlineCnvsWithGatk.py  CollectReadCounts.py  DeterminePloidy.py  FastCombineGCnvs.py  JointSegmentCnvVcfs.py  MtToEsCnv.py  PrepareIntervals.py  ProcessCohortCnvCallsToSgVcf.py  RecalculateClusteredQuality.py  SplitAnnotatedVcfByDataset.py  TrimOffSexChromosomes.py  UpgradePedWithInferredSex.py
src/cpg_gcnv/scripts/: annotate_cohort.py  annotate_dataset.py  mt_to_es.py  update_vcf_attributes.py  upgrade_ped_with_inferred_sex.py
