[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name='cpg_gcnv'
description='CPG-Flow implementation of the GCNV workflow'
readme = "README.md"
# currently cpg-flow is pinned to this version
requires-python = ">=3.10,<3.11"
version="0.1.1"
license={ "file" = "LICENSE" }
classifiers=[
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]

dependencies=[
    "cpg-flow==0.2.4",
    "cpg-utils>=5.3.0",
    "elasticsearch>=9.0.1",
    "google-auth>=2.40.2",
    "hatchling>=1.27.0",
    "loguru>=0.7.3",
    "ruff>=0.11.11",
]

[project.urls]
Repository = "https://github.com/populationgenomic/cpg-flow-gcnv"

[project.optional-dependencies]
# various requirements when running cpg-flow/analysis-runner
test = [
    'bump-my-version',
    'pre-commit',
    'pytest',
]

[project.scripts]
# the workflow runner script - entrypoint for the pipeline
run_workflow = 'cpg_gcnv.run_workflow:cli_main'

[tool.hatch.build.targets.wheel]
packages = ["src/cpg_gcnv"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.setuptools]
package-dir = {"" = "src"}

[options]
include_package_data = true

[options.package_data]
'cpg_gcnv'=  ['config_template.toml']

[tool.black]
line-length = 120
skip-string-normalization = true
exclude = '''
/(
  venv
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ['test']

[tool.ruff]
line-length = 120
extend-exclude = ["venv", ".mypy_cache", ".venv", "build", "dist"]

[tool.ruff.format]
indent-style = 'space'
quote-style = 'single'

[tool.ruff.lint]
# ignore pydocstyle, flake8-boolean-trap (FBT)
select = ["A", "B", "C", "E", "F", "G", "I", "N", "Q", "S", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "ERA", "EXE", "ICN", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "UP", "YTT"]

extend-select = ["I"]

fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "ERA", "EXE", "FBT", "ICN", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "UP", "YTT"]

ignore = [
    "ANN001", # Missing type annotation for function argument
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for `cls` in classmethod
    "ANN201", # Missing return type annotation for public function
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "ANN204", # Missing type annotation for special method `__init__`
    "COM819", # Trailing comma prohibited
    "E731", # Do not assign a lambda expression, use a def
    "PLW0603", # Using the global statement to update `<VAR>` is discouraged
    "Q000", # Single quotes found but double quotes preferred
    "PLR0912", # Too many branches (> 12)
    "PLR0913", # Too many arguments in function (> 5)
    "C901", # method is too complex (> 10 conditions)
    "Q003",
]


[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "hail", "cpg", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
cpg = ["metamist", "talos"]
hail = ["hail"]

[tool.ruff.lint.per-file-ignores]
# suppress the ARG002 "Unused method argument" warning in the stages.py file
## - we don't need generic cpg-flow arguments for every Stage, but need to fit the required method signature
"src/cpg_gcnv/stages.py" = ["ARG002"]

[tool.bumpversion]
current_version = "0.1.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version='{current_version}'"
replace = "version='{new_version}'"

[[tool.bumpversion.files]]
filename = ".github/workflows/docker.yaml"
search = "VERSION: {current_version}"
replace = "VERSION: {new_version}"

[[tool.bumpversion.files]]
filename = "README.md"
search = "{current_version}"
replace = "{new_version}"
